; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_reset.c_parse_args.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_reset.c_parse_args.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pathspec = type { i32 }
%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"--\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"index file corrupt\00", align 1
@PATHSPEC_PREFER_FULL = common dso_local global i32 0, align 4
@PATHSPEC_PREFIX_ORIGIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pathspec*, i8**, i8*, i32, i8**)* @parse_args to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parse_args(%struct.pathspec* %0, i8** %1, i8* %2, i32 %3, i8** %4) #0 {
  %6 = alloca %struct.pathspec*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8**, align 8
  %11 = alloca i8*, align 8
  %12 = alloca %struct.object_id, align 4
  store %struct.pathspec* %0, %struct.pathspec** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8** %4, i8*** %10, align 8
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %11, align 8
  %13 = load i8**, i8*** %7, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i64 0
  %15 = load i8*, i8** %14, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %83

17:                                               ; preds = %5
  %18 = load i8**, i8*** %7, align 8
  %19 = getelementptr inbounds i8*, i8** %18, i64 0
  %20 = load i8*, i8** %19, align 8
  %21 = call i32 @strcmp(i8* %20, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %17
  %24 = load i8**, i8*** %7, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i32 1
  store i8** %25, i8*** %7, align 8
  br label %82

26:                                               ; preds = %17
  %27 = load i8**, i8*** %7, align 8
  %28 = getelementptr inbounds i8*, i8** %27, i64 1
  %29 = load i8*, i8** %28, align 8
  %30 = icmp ne i8* %29, null
  br i1 %30, label %31, label %43

31:                                               ; preds = %26
  %32 = load i8**, i8*** %7, align 8
  %33 = getelementptr inbounds i8*, i8** %32, i64 1
  %34 = load i8*, i8** %33, align 8
  %35 = call i32 @strcmp(i8* %34, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %43, label %37

37:                                               ; preds = %31
  %38 = load i8**, i8*** %7, align 8
  %39 = getelementptr inbounds i8*, i8** %38, i64 0
  %40 = load i8*, i8** %39, align 8
  store i8* %40, i8** %11, align 8
  %41 = load i8**, i8*** %7, align 8
  %42 = getelementptr inbounds i8*, i8** %41, i64 2
  store i8** %42, i8*** %7, align 8
  br label %81

43:                                               ; preds = %31, %26
  %44 = load i8**, i8*** %7, align 8
  %45 = getelementptr inbounds i8*, i8** %44, i64 1
  %46 = load i8*, i8** %45, align 8
  %47 = icmp ne i8* %46, null
  br i1 %47, label %54, label %48

48:                                               ; preds = %43
  %49 = load i8**, i8*** %7, align 8
  %50 = getelementptr inbounds i8*, i8** %49, i64 0
  %51 = load i8*, i8** %50, align 8
  %52 = call i32 @get_oid_committish(i8* %51, %struct.object_id* %12)
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %65

54:                                               ; preds = %48, %43
  %55 = load i8**, i8*** %7, align 8
  %56 = getelementptr inbounds i8*, i8** %55, i64 1
  %57 = load i8*, i8** %56, align 8
  %58 = icmp ne i8* %57, null
  br i1 %58, label %59, label %74

59:                                               ; preds = %54
  %60 = load i8**, i8*** %7, align 8
  %61 = getelementptr inbounds i8*, i8** %60, i64 0
  %62 = load i8*, i8** %61, align 8
  %63 = call i32 @get_oid_treeish(i8* %62, %struct.object_id* %12)
  %64 = icmp ne i32 %63, 0
  br i1 %64, label %74, label %65

65:                                               ; preds = %59, %48
  %66 = load i8*, i8** %8, align 8
  %67 = load i8**, i8*** %7, align 8
  %68 = getelementptr inbounds i8*, i8** %67, i64 0
  %69 = load i8*, i8** %68, align 8
  %70 = call i32 @verify_non_filename(i8* %66, i8* %69)
  %71 = load i8**, i8*** %7, align 8
  %72 = getelementptr inbounds i8*, i8** %71, i32 1
  store i8** %72, i8*** %7, align 8
  %73 = load i8*, i8** %71, align 8
  store i8* %73, i8** %11, align 8
  br label %80

74:                                               ; preds = %59, %54
  %75 = load i8*, i8** %8, align 8
  %76 = load i8**, i8*** %7, align 8
  %77 = getelementptr inbounds i8*, i8** %76, i64 0
  %78 = load i8*, i8** %77, align 8
  %79 = call i32 @verify_filename(i8* %75, i8* %78, i32 1)
  br label %80

80:                                               ; preds = %74, %65
  br label %81

81:                                               ; preds = %80, %37
  br label %82

82:                                               ; preds = %81, %23
  br label %83

83:                                               ; preds = %82, %5
  %84 = load i8*, i8** %11, align 8
  %85 = load i8**, i8*** %10, align 8
  store i8* %84, i8** %85, align 8
  %86 = call i64 (...) @read_cache()
  %87 = icmp slt i64 %86, 0
  br i1 %87, label %88, label %91

88:                                               ; preds = %83
  %89 = call i32 @_(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %90 = call i32 @die(i32 %89)
  br label %91

91:                                               ; preds = %88, %83
  %92 = load %struct.pathspec*, %struct.pathspec** %6, align 8
  %93 = load i32, i32* @PATHSPEC_PREFER_FULL, align 4
  %94 = load i32, i32* %9, align 4
  %95 = icmp ne i32 %94, 0
  br i1 %95, label %96, label %98

96:                                               ; preds = %91
  %97 = load i32, i32* @PATHSPEC_PREFIX_ORIGIN, align 4
  br label %99

98:                                               ; preds = %91
  br label %99

99:                                               ; preds = %98, %96
  %100 = phi i32 [ %97, %96 ], [ 0, %98 ]
  %101 = or i32 %93, %100
  %102 = load i8*, i8** %8, align 8
  %103 = load i8**, i8*** %7, align 8
  %104 = call i32 @parse_pathspec(%struct.pathspec* %92, i32 0, i32 %101, i8* %102, i8** %103)
  ret void
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @get_oid_committish(i8*, %struct.object_id*) #1

declare dso_local i32 @get_oid_treeish(i8*, %struct.object_id*) #1

declare dso_local i32 @verify_non_filename(i8*, i8*) #1

declare dso_local i32 @verify_filename(i8*, i8*, i32) #1

declare dso_local i64 @read_cache(...) #1

declare dso_local i32 @die(i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @parse_pathspec(%struct.pathspec*, i32, i32, i8*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
